@@ -15,6 +15,8 @@
     * Net::SSLeay::XX509#get_subject_name method returns a copied value.
     * Net::SSLeay::XX509#get_ext method returns a copied value.
     * Net::SSLeay::XX509#check_issued method becomes a static method.
+  [Bug Fix]
+    * Fix STACK_OF memory bugs.
     
 0.023 2024-12-06
   [New Features]
